fix: spacing home layout

--- a/client/src/styles/FingoHomeLayout.styles.css
+++ b/client/src/styles/FingoHomeLayout.styles.css
@@ -1,4 +1,5 @@
 .FingoHomeLayout {
+    padding-bottom: 78px; 
 }
 
 .FingoHomeLayoutWrapper {
